# vehicle-inspector

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
assets/sample_inputs/: .gitkeep
configs/: dataset_cardd.yaml
configs/models/: yoloe_zeroshot.yaml  yolov11_seg.yaml  yolov8_seg.yaml
docker/: Dockerfile  docker-compose.yml
docs/: DAILY_TASKS.md  GETTING_STARTED.md  REPORT_OUTLINE.md  RESULTS.md  ROADMAP.md
scripts/: run_api.sh
src/vehicle_inspector/: __init__.py  config.py
src/vehicle_inspector/evaluation/: evaluate.py
src/vehicle_inspector/inference/: __init__.py  annotate.py  pipeline.py
src/vehicle_inspector/models/: __init__.py  base.py  registry.py  ultralytics_seg.py  yoloe_baseline.py
src/vehicle_inspector/reporting/: __init__.py  report.py
src/vehicle_inspector/serving/: app.py  schemas.py
src/vehicle_inspector/training/: train.py
tests/: test_annotate.py  test_pipeline_smoke.py  test_report.py  test_serving.py
